Fixed contrast

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   }
 
 h1 {
-  color: antiquewhite;
+  color: black;
 }
 
 .container {
@@ -48,7 +48,7 @@ footer {
 
 .subjects {
   background-color:bisque;
-  color: burlywood;
+  color: black;
   margin: 20px;
   padding: 20px;
 }
